# glibexample

./: Makefile.am  configure.ac
lib/: Makefile.am  glibhelper-signal.c  glibhelper-signal.h  glibhelper-timerfd-support.c  glibhelper-timerfd-support.h  glibhelper-unix-socket-support-client.c  glibhelper-unix-socket-support-internal.c  glibhelper-unix-socket-support-server.c  glibhelper-unix-socket-support-util.c  glibhelper-unix-socket-support-util.h  glibhelper-unix-socket-support.h
src/: Makefile.am  client-main-mt.c  client-main.c  example-common.h  main.c  server-main-mt.c  server-main.c
